--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="https://i.ibb.co/bgCktXkj/5654592.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Whereisit</title>
+    <title>WhereIsIt</title>
   </head>
   <body>
     <div id="root"></div>
